--- a/index.html
+++ b/index.html
@@ -40,220 +40,81 @@
             <h1>Unturned</h1>
             <hr>
         </div>
-        <div class="card">
-            <img class="leftswipe" src="arrow.png" onclick="indexSlide(-1)"></img>
+        <div class="indexcard">
             <div class="container">
-                <div class="indexmaincard">
-                    <div class="Slides" style="display: block;">
-                        <div class="index">
-                            <div class="numbertext">1 / 7</div>
-                            <img src="images/peter/header.png" style="width:100%">
-                        </div>
-                    </div>
-                    <div class="vflex">
-                        <div class="rightcol">
-                            <img src="images/akos/unturned/header.jpg" alt="header?">
-                        </div>
-                        <div>
-                            <p>
-                                You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
-                            </p>
-                            <p>Last ratings: <a target="_blank"
-                                href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>All ratings:
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                            <p>
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
-                            </p>
-                        </div>
-                    </div>
+                <div class="Slides" style="display: block;">
+                    <div class="numbertext">1 / 7</div>
+                    <img src="images/peter/r6_slide3.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
-
-                <div class="indexmaincard">
-                    <div class="Slides" style="display: block;">
-                        <div class="index">
-                            <div class="numbertext">1 / 7</div>
-                            <img src="images/peter/header.png" style="width:100%">
-                        </div>
-                    </div>
-                    <div class="vflex">
-                        <div class="rightcol">
-                            <img src="images/akos/unturned/header.jpg" alt="header?">
-                        </div>
-                        <div>
-                            <p>
-                                You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
-                            </p>
-                            <p>Last ratings: <a target="_blank"
-                                href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>All ratings:
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                            <p>
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
-                            </p>
-                        </div>
-                    </div>
+                <div class="Slides">
+                    <div class="numbertext">2 / 7</div>
+                    <img src="images/peter/mw2_slide4.jpg" style="width:100%">
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
                 </div>
 
-
-                <div class="indexmaincard">
-                    <div class="Slides" style="display: block;">
-                        <div class="index">
-                            <div class="numbertext">1 / 7</div>
-                            <img src="images/peter/header.png" style="width:100%">
-                        </div>
-                    </div>
-                    <div class="vflex">
-                        <div class="rightcol">
-                            <img src="images/akos/unturned/header.jpg" alt="header?">
-                        </div>
-                        <div>
-                            <p>
-                                You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
-                            </p>
-                            <p>Last ratings: <a target="_blank"
-                                href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>All ratings:
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                            <p>
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
-                            </p>
-                        </div>
-                    </div>
+                <div class="Slides">
+                    <div class="numbertext">3 / 7</div>
+                    <img src="images/akos/unturned/3.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
-
-                <div class="indexmaincard">
-                    <div class="Slides" style="display: block;">
-                        <div class="index">
-                            <div class="numbertext">1 / 7</div>
-                            <img src="images/peter/header.png" style="width:100%">
-                        </div>
-                    </div>
-                    <div class="vflex">
-                        <div class="rightcol">
-                            <img src="images/akos/unturned/header.jpg" alt="header?">
-                        </div>
-                        <div>
-                            <p>
-                                You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
-                            </p>
-                            <p>Last ratings: <a target="_blank"
-                                href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>All ratings:
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                            <p>
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
-                            </p>
-                        </div>
-                    </div>
+                <div class="Slides">
+                    <div class="numbertext">4 / 7</div>
+                    <img src="images/akos/unturned/4.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
-
-                <div class="indexmaincard">
-                    <div class="Slides" style="display: block;">
-                        <div class="index">
-                            <div class="numbertext">1 / 7</div>
-                            <img src="images/peter/header.png" style="width:100%">
-                        </div>
-                    </div>
-                    <div class="vflex">
-                        <div class="rightcol">
-                            <img src="images/akos/unturned/header.jpg" alt="header?">
-                        </div>
-                        <div>
-                            <p>
-                                You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
-                            </p>
-                            <p>Last ratings: <a target="_blank"
-                                href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>All ratings:
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                            <p>
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
-                            </p>
-                        </div>
-                    </div>
+                <div class="Slides">
+                    <div class="numbertext">5 / 7</div>
+                    <img src="5.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
-
-                <div class="indexmaincard">
-                    <div class="Slides" style="display: block;">
-                        <div class="index">
-                            <div class="numbertext">1 / 7</div>
-                            <img src="images/peter/header.png" style="width:100%">
-                        </div>
-                    </div>
-                    <div class="vflex">
-                        <div class="rightcol">
-                            <img src="images/akos/unturned/header.jpg" alt="header?">
-                        </div>
-                        <div>
-                            <p>
-                                You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
-                            </p>
-                            <p>Last ratings: <a target="_blank"
-                                href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>All ratings:
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                            <p>
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
-                            </p>
-                        </div>
-                    </div>
+                <div class="Slides">
+                    <div class="numbertext">6 / 7</div>
+                    <img src="6.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
+                <div class="Slides">
+                    <div class="numbertext">7 / 7</div>
+                    <img src="6.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
+                </div>
 
-                <div class="indexmaincard">
-                    <div class="Slides" style="display: block;">
-                        <div class="index">
-                            <div class="numbertext">1 / 7</div>
-                            <img src="images/peter/header.png" style="width:100%">
-                        </div>
+                <div class="row">
+                    <div class="column">
+                        <img class="demo cursor" src="images/akos/unturned/3.jpg" style="width:100%" onclick="currentSlide(1)" title="R6">
                     </div>
-                    <div class="vflex">
-                        <div class="rightcol">
-                            <img src="images/akos/unturned/header.jpg" alt="header?">
-                        </div>
-                        <div>
-                            <p>
-                                You're a survivor in the zombie infested ruins of society, and must work with your friends and forge alliances to remain among the living.
-                            </p>
-                            <p>Last ratings: <a target="_blank"
-                                href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>All ratings:
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/#app_reviews_hash">Very positive</a>
-                            </p>
-                            <p>Megjelenés dátuma: 2015. Dec. 1.</p>
-                            <p>
-                                <a target="_blank" href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege">forrás</a>
-                            </p>
-                        </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/peter/mw2_slide4.jpg" style="width:100%" onclick="currentSlide(2)" title="Modern Warfare 2">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/akos/unturned/3.jpg" style="width:100%" onclick="currentSlide(3)" title="CS:GO">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/akos/unturned/4.jpg" style="width:100%" onclick="currentSlide(4)" title="Syndicate">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/akos/unturned/5.jpg" style="width:100%" onclick="currentSlide(5)" title="Unturned">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/akos/unturned/6.jpg" style="width:100%" onclick="currentSlide(6)" title="Subnautica">
+                    </div>
+                    <div class="column">
+                        <img class="demo cursor" src="images/akos/unturned/6.jpg" style="width:100%" onclick="currentSlide(7)" title="ARK">
                     </div>
                 </div>
             </div>
-            <img class="rightswipe" src="arrow.png" onclick="indexSlide(1)"></img>
-
         </div>
         <div class="card2 left">
             <div class="coloumn">
