--- a/csgo.html
+++ b/csgo.html
@@ -9,7 +9,7 @@
     <script src="a.js"></script>
   
 </head>
-<body class="r6bg">
+<body class="csgobg">
 
     <div class="topnav" id="topnav">
         <a href="index.html">Főoldal</a>
