--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="untbg">
+<body class="indexbg">
 
     <div class="topnav" id="topnav">
         <a href="index.html">Főoldal</a>
