--- a/mw2.html
+++ b/mw2.html
@@ -9,7 +9,7 @@
     <script src="a.js"></script>
   
 </head>
-<body class="r6bg">
+<body class="mw2bg">
 
     <div class="topnav" id="topnav">
         <a href="#home" class="active">Home</a>
