--- a/syndicate.html
+++ b/syndicate.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 
-<body class="arkbg">
+<body class="syndicatebg">
     <div class="topnav" id="topnav">
         <a href="index.html">Főoldal</a>
         <div class="dropdown">
