ark syndicate sub képek/kesz

--- a/ark.html
+++ b/ark.html
@@ -12,7 +12,7 @@
     <div class="topnav" id="topnav">
         <a href="index.html">Főoldal</a>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn1">Action - Shooter<img class="rotate" onclick="toggleDrop1()" id="dropbtnbtn1" src="arrow.png" alt="Balfasz a js dev"></button>
+            <p class="dropbtn" id="dropBtn1">Action - Shooter<img class="rotate" onclick="toggleDrop1()" id="dropbtnbtn1" src="arrow.png" alt="Balfasz a js dev"></p>
             <div id="dropdown-content1" class="hide">
                 <a href="r6.html">R6</a>
                 <a href="mw2.html">MW2</a>
