--- a/subnautica.html
+++ b/subnautica.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="hu">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subnautica</title>
+    <title>ARK: Survival Evolved</title>
     <link rel="stylesheet" href="style.css">
     <script src="a.js"></script>
 </head>
-
 <body class="subbg">
     <div class="topnav" id="topnav">
         <a href="index.html">Főoldal</a>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn1">Action - Shooter<img class="rotate" onclick="toggleDrop1()"
-                    id="dropbtnbtn1" src="arrow.png" alt="Balfasz a js dev"></button>
+            <p class="dropbtn" id="dropBtn1">Action - Shooter<img class="rotate" onclick="toggleDrop1()" id="dropbtnbtn1" src="arrow.png" alt="Balfasz a js dev"></p>
             <div id="dropdown-content1" class="hide">
                 <a href="r6.html">R6</a>
                 <a href="mw2.html">MW2</a>
@@ -24,8 +21,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <p class="dropbtn" id="dropBtn2">Survival<img class="rotate" onclick="toggleDrop2()" id="dropbtnbtn2"
-                    src="arrow.png" alt="Balfasz a js dev"></button>
+            <p class="dropbtn" id="dropBtn2">Survival<img class="rotate" onclick="toggleDrop2()" id="dropbtnbtn2" src="arrow.png" alt="Balfasz a js dev"></p>
             <div id="dropdown-content2" class="hide">
                 <a href="unturned.html">Unturned</a>
                 <a class="active" href="subnautica.html">Subnautica</a>
@@ -37,119 +33,112 @@
         <div class="header">
             <h1>Subnautica</h1>
             <hr>
-        </div>
+        </div> 
         <div class="card">
             <div class="container">
                 <div class="Slides" style="display: block;">
                     <div class="numbertext">1 / 6</div>
                     <video id="autoplayvid" width="100%" height="auto" autoplay muted controls loop>
-                        <source src="images/balint/acvideo.webm" type="video/webm">
-                        Your browser does not support the video tag.
+                        <source src="images/balint/subvideo.webm" type="video/webm">
                     </video>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">2 / 6</div>
-                    <img src="images/balint/acnagy1.png" style="width:100%">
+                    <img src="images/balint/subkep1.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">3 / 6</div>
-                    <img src="images/balint/acnagy2.png" style="width:100%">
+                    <img src="images/balint/subkep2.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">4 / 6</div>
-                    <img src="img_lights_wide.jpg" style="width:100%">
+                    <img src="images/balint/subkep3.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">5 / 6</div>
-                    <img src="img_nature_wide.jpg" style="width:100%">
+                    <img src="images/balint/subkep4.jpg" style="width:100%">
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">6 / 6</div>
-                    <img src="img_snow_wide.jpg" style="width:100%">
+                    <img src="images/balint/subkep5.jpg" style="width:100%">
                 </div>
 
                 <div class="row">
                     <div class="column">
-                        <img class="demo cursor" src="images/balint/acvideokep.png" style="width:100%"
-                            onclick="currentSlide(1)" alt="3.0 Release Trailer">
+                        <img class="demo cursor" src="images/balint/subvideokep.jpg" style="width:100%"
+                            onclick="currentSlide(1)" >
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/balint/ackicsi1.png" style="width:100%"
-                            onclick="currentSlide(2)" alt="Nelson in PEI construction site">
+                        <img class="demo cursor" src="images/balint/subkep1.jpg" style="width:100%"
+                            onclick="currentSlide(2)" >
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/balint/acnagy2.png" style="width:100%"
-                            onclick="currentSlide(3)" alt="Mountains and fjords">
+                        <img class="demo cursor" src="images/balint/subkep2.jpg" style="width:100%"
+                            onclick="currentSlide(3)">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="" style="width:100%" onclick="currentSlide(4)"
-                            alt="Northern Lights">
+                        <img class="demo cursor" src="images/balint/subkep3.jpg" style="width:100%" onclick="currentSlide(4)"
+                            >
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="" style="width:100%" onclick="currentSlide(5)"
-                            alt="Nature and sunrise">
+                        <img class="demo cursor" src="images/balint/subkep4.jpg" style="width:100%" onclick="currentSlide(5)"
+                           >
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="" style="width:100%" onclick="currentSlide(6)"
-                            alt="Snowy Mountains">
+                        <img class="demo cursor" src="images/balint/subkep5.jpg" style="width:100%" onclick="currentSlide(6)"
+                          >
                     </div>
                 </div>
             </div>
-            <div class="vflex">
+                <div class="vflex">
                 <div class="rightcol">
-                    <img src="images/balint/sub.png" alt="header?">
-                </div>
-                <div class="smippet">
-                    <p>
-                        Descend into the depths of an alien underwater
+                            <img src="images/balint/sub.png" alt="header?">
+                    <div class="snippet">
+                                <p>
+                                    Descend into the depths of an alien underwater
                         world filled with wonder and peril. Craft
                         equipment, pilot submarines and out-smart
                         wildlife.
                         Developed by: Unknown Worlds Entertainment
-                    </p>
-                </div>
-
-
-                <div class="about">
-                    <p>Last ratings: <a target="_blank"
-                            href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/#app_reviews_hash">Overwhelmingly
+                                </p>
+                    </div>
+                     <div class="about"> 
+                        <p>Last ratings: <a target="_blank"
+                            href="https://store.steampowered.com/app/264710/Subnautica/">Overwhelmingly
                             Positive</a> <br></p>
                     <p>All ratings: <a target="_blank"
-                            href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/#app_reviews_hash">Overwhelmingly
+                            href="https://store.steampowered.com/app/264710/Subnautica/">Overwhelmingly
                             Positive</a> <br></p>
                     <p>Date of release: 2018. Jan. 23.</p>
-                    <p><a target="_blank" href="https://store.steampowered.com/app/346110/ARK_Survival_Evolved/">forrás</a>
+                    <p><a target="_blank" href="https://store.steampowered.com/app/264710/Subnautica/#app_reviews_hash">source</a>
                     </p>
+                     </div>
                 </div>
             </div>
-        </div>
-
-
+            </div>
+        
         <div class="card2">
-            <div class="column">
-                <h1>About the game</h1>
-                <hr>
-
-                Subnautica is an underwater adventure game set on an alien ocean planet. A massive, open world full of
-                wonder and peril awaits you!
+            <div class="coloumn">
+            <h1>About the game</h1>
+            <hr>
+            Subnautica is an underwater adventure game set on an alien ocean planet. A massive, open world full of
+            wonder and peril awaits you! <br>
                 <hr>
                 <img class="kepkozep" src="images/balint/sub1.png" alt="gif"> <br>
                 <hr>
                 You have crash-landed on an alien ocean world, and the only way to go is down. Subnautica's oceans range
                 from sun drenched shallow coral reefs to treacherous deep-sea trenches, lava fields, and bio-luminescent
                 underwater rivers. Manage your oxygen supply as you explore kelp forests, plateaus, reefs, and winding
-                cave systems. The water teems with life: Some of it helpful, much of it harmful.
+                cave systems. The water teems with life: Some of it helpful, much of it harmful. <br>
                 <hr>
                 <img class="kepkozep" src="images/balint/sub2.png" alt="gif2">
-
             </div>
         </div>
     </div>
 </body>
-
 </html>
