--- a/ark.html
+++ b/ark.html
@@ -41,31 +41,43 @@
                     <video id="autoplayvid" width="100%" height="auto" autoplay muted controls loop>
                         <source src="images/balint/arkvideo.webm" type="video/webm">
                     </video>
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">2 / 6</div>
                     <img src="images/balint/arkkep1.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">3 / 6</div>
                     <img src="images/balint/arkkep2.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">4 / 6</div>
                     <img src="images/balint/arkkep3.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">5 / 6</div>
                     <img src="images/balint/arkkep4.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">6 / 6</div>
                     <img src="images/balint/arkkep5.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="row">
