--- a/syndicate.html
+++ b/syndicate.html
@@ -47,31 +47,43 @@
                         <source src="images/balint/acvideo.webm" type="video/webm">
                         Your browser does not support the video tag.
                     </video>
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">2 / 6</div>
                     <img src="images/balint/acnagy1.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">3 / 6</div>
                     <img src="images/balint/acnagy2.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">4 / 6</div>
                     <img src="images/balint/ackep1.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">5 / 6</div>
                     <img src="images/balint/ackep2.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">6 / 6</div>
                     <img src="images/balint/ackep3.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="row">
