--- a/subnautica.html
+++ b/subnautica.html
@@ -41,31 +41,43 @@
                     <video id="autoplayvid" width="100%" height="auto" autoplay muted controls loop>
                         <source src="images/balint/subvideo.webm" type="video/webm">
                     </video>
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">2 / 6</div>
                     <img src="images/balint/subkep1.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">3 / 6</div>
                     <img src="images/balint/subkep2.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">4 / 6</div>
                     <img src="images/balint/subkep3.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">5 / 6</div>
                     <img src="images/balint/subkep4.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">6 / 6</div>
                     <img src="images/balint/subkep5.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="row">
